fix cssのz-index修正

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ section {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10000000000;
+    z-index: 1000;
     background: rgba(30,30,30,0.9);
     opacity: 0.8;
 }
